--- a/bat/.config/bat/config
+++ b/bat/.config/bat/config
@@ -4,14 +4,17 @@
 
 # Specify desired highlighting theme (e.g. "TwoDark"). Run `bat --list-themes`
 # for a list of all available themes
-# --theme="Catppuccin-macchiato"
+--theme="Catppuccin Macchiato"
 
 # Enable this to use italic text on the terminal. This is not supported on all
 # terminal emulators (like tmux, by default):
-#--italic-text=always
+--italic-text=always
+--style=full
+--color=always
+--decorations=always
 
 # Uncomment the following line to disable automatic paging:
-#--paging=never
+# --paging=never
 
 # Uncomment the following line if you are using less version >= 551 and want to
 # enable mouse scrolling support in `bat` when running inside tmux. This might
@@ -22,5 +25,5 @@
 #   Example 1: use the C++ syntax for Arduino .ino files
 #   Example 2: Use ".gitignore"-style highlighting for ".ignore" files
 #--map-syntax "*.ino:C++"
-#--map-syntax ".ignore:Git Ignore"
---theme="Catppuccin Macchiato"
+--map-syntax ".ignore:Git Ignore"
+--map-syntax "ignore:Git Ignore"
