update git config, add delta diff viewer

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,13 +1,28 @@
+[include]
+  path = ~/.config/git/themes/catppuccin.gitconfig
 [user]
+	signingkey = A7323083D70B4B12
 	email = 8709797+markusrf@users.noreply.github.com
 	name = Markus Rye Foss
 [commit]
 	gpgsign = true
 [core]
 	editor = nano
+	pager = delta
+	excludesfile = ~/.config/git/ignore
 [alias]
 	s = status -s
 	unstage = reset HEAD --
 	ll = log --oneline
 	done = "!CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD); if [ \"$CURRENT_BRANCH\" == \"main\" ]; then echo \"nope, not on main...\"; else git switch main && git branch -D $CURRENT_BRANCH && git pull; fi"
 	ca = commit --amend --no-edit
+[delta]
+  features = catppuccin-macchiato
+  side-by-side = false
+  true-color = always
+  hyperlinks = true
+  line-numbers = true
+[diff]
+  colorMoved = default
+[interactive]
+    diffFilter = delta --color-only
