add kitty macos opt as alt setting

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,8 @@ include macchiato.conf
 
 editor nano
 
+macos_option_as_alt yes
+
 # TAB BAR
 tab_bar_min_tabs            1
 tab_bar_edge                bottom
