kitty hide titlebar and transparent background

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,6 +4,10 @@ include macchiato.conf
 editor nano
 
 macos_option_as_alt yes
+hide_window_decorations titlebar-only
+
+background_opacity 0.8
+background_blur 20
 
 # TAB BAR
 tab_bar_min_tabs            1
