--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,6 +9,7 @@ hide_window_decorations titlebar-only
 background_opacity 0.8
 background_blur 20
 
+
 # TAB BAR
 tab_bar_min_tabs            1
 tab_bar_edge                bottom
@@ -26,9 +27,30 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 
+
 # FONTS
 font_family       family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg features="+ss02 +ss03 +ss05 +ss07 +ss08"
 bold_font         auto
 italic_font       auto
 bold_italic_font  auto
 disable_ligatures cursor
+
+
+# WINDOWS, LAYOUT, etc
+
+enabled_layouts  splits
+
+map cmd+w        close_tab
+map cmd+shift+w  close_window
+map cmd+d        launch --type=window --location=hsplit
+map cmd+shift+d  launch --type=window  --location=vsplit
+
+map cmd+opt+left neighboring_window left
+map cmd+opt+right neighboring_window right
+map cmd+opt+up neighboring_window up
+map cmd+opt+down neighboring_window down
+
+map cmd+opt+shift+up move_window up
+map cmd+opt+shift+left move_window left
+map cmd+opt+shift+right move_window right
+map cmd+opt+shift+down move_window down
