kitty add window layout and hide tabs if one

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,7 +11,7 @@ background_blur 20
 
 
 # TAB BAR
-tab_bar_min_tabs            1
+tab_bar_min_tabs            2
 tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
@@ -42,19 +42,20 @@ window_border_width 1
 window_margin_width 3
 single_window_margin_width 0
 
-enabled_layouts  splits
+enabled_layouts          splits, stack
+map cmd+opt+enter        next_layout
 
-map cmd+w        close_tab
-map cmd+shift+w  close_window
-map cmd+d        launch --type=window --location=hsplit
-map cmd+shift+d  launch --type=window  --location=vsplit
+map cmd+w                close_tab
+map cmd+shift+w          close_window
+map cmd+d                launch --type=window --location=hsplit
+map cmd+shift+d          launch --type=window  --location=vsplit
 
-map cmd+opt+left neighboring_window left
-map cmd+opt+right neighboring_window right
-map cmd+opt+up neighboring_window up
-map cmd+opt+down neighboring_window down
+map cmd+opt+left         neighboring_window left
+map cmd+opt+right        neighboring_window right
+map cmd+opt+up           neighboring_window up
+map cmd+opt+down         neighboring_window down
 
-map cmd+opt+shift+up move_window up
-map cmd+opt+shift+left move_window left
-map cmd+opt+shift+right move_window right
-map cmd+opt+shift+down move_window down
+map cmd+opt+shift+up     move_window up
+map cmd+opt+shift+left   move_window left
+map cmd+opt+shift+right  move_window right
+map cmd+opt+shift+down   move_window down
