kitty search func and mac opt as alt no

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ include macchiato.conf
 
 editor nano
 
-macos_option_as_alt yes
+macos_option_as_alt no
 hide_window_decorations titlebar-only
 
 background_opacity 0.8
@@ -48,7 +48,7 @@ map cmd+opt+enter        next_layout
 map cmd+w                close_tab
 map cmd+shift+w          close_window
 map cmd+d                launch --type=window --location=hsplit
-map cmd+shift+d          launch --type=window  --location=vsplit
+map cmd+shift+d          launch --type=window --location=vsplit
 
 map cmd+opt+left         neighboring_window left
 map cmd+opt+right        neighboring_window right
@@ -59,3 +59,5 @@ map cmd+opt+shift+up     move_window up
 map cmd+opt+shift+left   move_window left
 map cmd+opt+shift+right  move_window right
 map cmd+opt+shift+down   move_window down
+
+map cmd+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i --tac
