kitty add keymaps for some opt keys

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,8 +4,16 @@ include macchiato.conf
 editor nano
 
 macos_option_as_alt no
-hide_window_decorations titlebar-only
 
+# These are only needed when option_as_alt is set to 'yes'
+map alt+7 send_text all |
+map alt+8 send_text all [
+map alt+9 send_text all ]
+map shift+alt+7 send_text all \\
+map shift+alt+8 send_text all {
+map shift+alt+9 send_text all }
+
+hide_window_decorations titlebar-only
 background_opacity 0.8
 background_blur 20
 
