--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,8 +14,8 @@ map shift+alt+8 send_text all {
 map shift+alt+9 send_text all }
 
 hide_window_decorations titlebar-only
-background_opacity 0.8
-background_blur 20
+background_opacity 0.7
+background_blur 30
 
 
 # TAB BAR
@@ -23,7 +23,7 @@ tab_bar_min_tabs            2
 tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
-tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+tab_title_template          {title.split('/')[-1]}{' ({})'.format(num_windows) if num_windows > 1 else ''}
 
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
