set cursor shape to beam

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -69,3 +69,6 @@ map cmd+opt+shift+right  move_window right
 map cmd+opt+shift+down   move_window down
 
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback fzf --no-sort --no-mouse --exact -i --tac
+
+cursor_shape beam
+
