--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -47,7 +47,7 @@ disable_ligatures cursor
 # WINDOWS, LAYOUT, etc
 
 window_border_width 1
-window_margin_width 3
+# window_margin_width 3
 single_window_margin_width 0
 
 enabled_layouts          splits, stack
