add keybinds for changing background opacity

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,9 +14,13 @@ map shift+alt+8 send_text all {
 map shift+alt+9 send_text all }
 
 hide_window_decorations titlebar-only
-background_opacity 0.7
-background_blur 30
 
+# BACKGROUND
+dynamic_background_opacity yes
+background_opacity         0.7
+background_blur            30
+map cmd+opt+b set_background_opacity 1
+map cmd+opt+v set_background_opacity default
 
 # TAB BAR
 tab_bar_min_tabs            2
