--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -38,5 +38,7 @@ git:
   # 'ci' - iso date
   # 'cs' - short date (YYYY-MM-DD)
   # 'ch' - human readable
+  log:
+    showWholeGraph: true
   branchLogCmd: "git log --graph --color=always --pretty=format:'%C(cyan)%h%Creset %Cgreen%ch%Creset -%C(yellow)%d%Creset %s %C(red)<%an>%Creset' --abbrev-commit {{branchName}} --"
 notARepository: skip
