change default kitty opacity

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -17,10 +17,10 @@ hide_window_decorations titlebar-only
 
 # BACKGROUND
 dynamic_background_opacity yes
-background_opacity         0.7
+background_opacity          1
 background_blur            30
-map cmd+opt+b set_background_opacity 1
-map cmd+opt+v set_background_opacity default
+map cmd+opt+b set_background_opacity default
+map cmd+opt+v set_background_opacity 0.7
 
 # TAB BAR
 tab_bar_min_tabs            2
