--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -29,12 +29,12 @@ gui:
   # authorColors:
   #   '*': '#b7bdf8'
   branchColors:
-    'release': '#ee99a0'   # red
+    'fix': '#ee99a0'       # red
+    'patch': '#f5a97f'     # peach
     'wip': '#eed49f'       # yellow
     'refactor': '#8bd5ca'  # teal
     'feat': '#8aadf4'      # blue
-    'patch': '#f5a97f'     # peach
-    # 'main': '#c6a0f6'
+    'release': '#c6a0f6'   # mauve
 git:
   paging:
     pager: "delta --paging=never"
