kitty: unmap next prev tab

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -39,6 +39,9 @@ map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 
+map ctrl+shift+left
+map ctrl+shift+right
+
 
 # FONTS
 font_family       family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg features="+ss02 +ss03 +ss05 +ss07 +ss08"
