--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,7 +13,6 @@ map shift+alt+7 send_text all \\
 map shift+alt+8 send_text all {
 map shift+alt+9 send_text all }
 
-hide_window_decorations titlebar-only
 
 # BACKGROUND
 dynamic_background_opacity yes
@@ -53,9 +52,13 @@ disable_ligatures cursor
 
 # WINDOWS, LAYOUT, etc
 
-window_border_width 1
-# window_margin_width 3
-single_window_margin_width 0
+remember_window_size       no
+initial_window_width     280c
+initial_window_height     70c
+hide_window_decorations    titlebar-only
+window_border_width        1
+window_margin_width        0
+single_window_margin_width 5 5 0
 
 enabled_layouts          splits, stack
 map cmd+opt+enter        next_layout
