--- a/gh/.config/gh-dash/config.yml
+++ b/gh/.config/gh-dash/config.yml
@@ -21,7 +21,7 @@ repo:
 defaults:
   preview:
     open: true
-    width: 50
+    width: 70
   prsLimit: 20
   issuesLimit: 20
   view: prs
@@ -49,7 +49,7 @@ defaults:
       createdAt:
         width: 5
       repo:
-        width: 15
+        width: 20
       creator:
         width: 10
       assignees:
@@ -67,7 +67,7 @@ theme:
     sectionsShowCount: true
     table:
       showSeparator: true
-      compact: false
+      compact: true
   colors:
     text:
       primary: "#cad3f5"
@@ -84,5 +84,5 @@ theme:
       secondary: "#494d64"
       faint: "#363a4f"
 pager:
-  diff: ""
+  diff: "delta"
 confirmQuit: false
