nvim: add initial lsp config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,6 +27,7 @@ tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title.split('/')[-1]}{' ({})'.format(num_windows) if num_windows > 1 else ''}
+# tab_title_template          {tab.active_oldest_wd.split('/')[-1] if tab.active_oldest_wd.split('/')[-1] != 'markus.foss' else '~'}{' {}'.format(tab.active_oldest_exe) if tab.active_oldest_exe != '-zsh' else ''}
 
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
@@ -54,7 +55,7 @@ disable_ligatures cursor
 
 remember_window_size       no
 initial_window_width     280c
-initial_window_height     70c
+initial_window_height     75c
 hide_window_decorations    titlebar-only
 window_border_width        1
 window_margin_width        0
