nvim: tweak pyright setup

--- a/neovim/.config/nvim/pyrightconfig-global.json
+++ b/neovim/.config/nvim/pyrightconfig-global.json
@@ -1,5 +1,8 @@
 {
   "venvPath": ".",
   "venv": ".venv",
-  "typeCheckingMode": "off"
+  "typeCheckingMode": "off",
+  "autoSearchPaths": true,
+  "useLibraryCodeForTypes": true,
+  "diagnosticMode": "openFilesOnly"
 }
