nvim: add pyright extra path

--- a/neovim/.config/nvim/pyrightconfig-global.json
+++ b/neovim/.config/nvim/pyrightconfig-global.json
@@ -4,5 +4,8 @@
   "typeCheckingMode": "off",
   "autoSearchPaths": true,
   "useLibraryCodeForTypes": true,
-  "diagnosticMode": "openFilesOnly"
+  "diagnosticMode": "openFilesOnly",
+  "extraPaths": [
+    "libecalc/**",
+  ],
 }
