kitty: update tab title

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -26,7 +26,7 @@ tab_bar_min_tabs            2
 tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
-tab_title_template          {title.split('/')[-1]}{' ({})'.format(num_windows) if num_windows > 1 else ''}
+tab_title_template          {title.split('/')[-1].split(' -')[0]}{' ({})'.format(num_windows) if num_windows > 1 else ''}
 # tab_title_template          {tab.active_oldest_wd.split('/')[-1] if tab.active_oldest_wd.split('/')[-1] != 'markus.foss' else '~'}{' {}'.format(tab.active_oldest_exe) if tab.active_oldest_exe != '-zsh' else ''}
 
 map cmd+1 goto_tab 1
