--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -44,6 +44,7 @@ map ctrl+shift+right
 
 
 # FONTS
+font_size         13.0
 font_family       family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg features="+ss02 +ss03 +ss05 +ss07 +ss08"
 bold_font         auto
 italic_font       auto
@@ -54,8 +55,8 @@ disable_ligatures cursor
 # WINDOWS, LAYOUT, etc
 
 remember_window_size       no
-initial_window_width     280c
-initial_window_height     75c
+initial_window_width     245c
+initial_window_height     63c
 hide_window_decorations    titlebar-only
 window_border_width        1
 window_margin_width        0
