kitty: add hjkl tab and window navigation

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,16 +29,6 @@ tab_powerline_style         slanted
 tab_title_template          {title.split('/')[-1].split(' -')[0]}{' ({})'.format(num_windows) if num_windows > 1 else ''}
 # tab_title_template          {tab.active_oldest_wd.split('/')[-1] if tab.active_oldest_wd.split('/')[-1] != 'markus.foss' else '~'}{' {}'.format(tab.active_oldest_exe) if tab.active_oldest_exe != '-zsh' else ''}
 
-map cmd+1 goto_tab 1
-map cmd+2 goto_tab 2
-map cmd+3 goto_tab 3
-map cmd+4 goto_tab 4
-map cmd+5 goto_tab 5
-map cmd+6 goto_tab 6
-map cmd+7 goto_tab 7
-map cmd+8 goto_tab 8
-map cmd+9 goto_tab 9
-
 map ctrl+shift+left
 map ctrl+shift+right
 
@@ -65,6 +55,18 @@ single_window_margin_width 5 5 0
 enabled_layouts          splits, stack
 map cmd+opt+enter        next_layout
 
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+map cmd+l next_tab
+map cmd+h previous_tab
+
 map cmd+w                close_tab
 map cmd+shift+w          close_window
 map cmd+d                launch --type=window --location=hsplit
@@ -74,6 +76,10 @@ map cmd+opt+left         neighboring_window left
 map cmd+opt+right        neighboring_window right
 map cmd+opt+up           neighboring_window up
 map cmd+opt+down         neighboring_window down
+map cmd+opt+h            neighboring_window left
+map cmd+opt+j            neighboring_window down
+map cmd+opt+k            neighboring_window up
+map cmd+opt+l            neighboring_window right
 
 map cmd+opt+shift+up     move_window up
 map cmd+opt+shift+left   move_window left
