--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -34,8 +34,22 @@ map ctrl+shift+right
 
 
 # FONTS
+# font_family       family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg features="+ss02 +ss03 +ss05 +ss07 +ss08"
+# modify_font cell_height 100%
+# modify_font cell_width  100%
+# modify_font baseline 0
+
+# font_family       family='Monaspace Neon Var' postscript_name=MonaspaceNeonVar-Light features="+liga +ss01 +ss02 +ss03 +ss04 +ss05 +cv01=2"
+# modify_font cell_height 120%
+# modify_font cell_width   90%
+# modify_font baseline -2
+
+font_family       family='Monaspace Argon Var' postscript_name=MonaspaceArgonVar-Light features="+liga +ss01 +ss02 +ss03 +ss04 +ss05 +cv01=2"
+modify_font cell_height 120%
+modify_font cell_width   90%
+modify_font baseline -2
+
 font_size         13.0
-font_family       family='FiraCode Nerd Font Mono' postscript_name=FiraCodeNFM-Reg features="+ss02 +ss03 +ss05 +ss07 +ss08"
 bold_font         auto
 italic_font       auto
 bold_italic_font  auto
