kitty: switch font from Monaspace Argon to Neon

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -39,15 +39,15 @@ map ctrl+shift+right
 # modify_font cell_width  100%
 # modify_font baseline 0
 
-# font_family       family='Monaspace Neon Var' postscript_name=MonaspaceNeonVar-Light features="+liga +ss01 +ss02 +ss03 +ss04 +ss05 +cv01=2"
-# modify_font cell_height 120%
-# modify_font cell_width   90%
-# modify_font baseline -2
-
-font_family       family='Monaspace Argon Var' postscript_name=MonaspaceArgonVar-Light features="+liga +ss01 +ss02 +ss03 +ss04 +ss05 +cv01=2"
+font_family       family='Monaspace Neon Var' postscript_name=MonaspaceNeonVar-Light features="+liga +ss01 +ss02 +ss03 +ss04 +ss05 +cv01=2"
 modify_font cell_height 120%
 modify_font cell_width   90%
 modify_font baseline -2
+
+# font_family       family='Monaspace Argon Var' postscript_name=MonaspaceArgonVar-Light features="+liga +ss01 +ss02 +ss03 +ss04 +ss05 +cv01=2"
+# modify_font cell_height 120%
+# modify_font cell_width   90%
+# modify_font baseline -2
 
 font_size         13.0
 bold_font         auto
