kitty: add cursor trail

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -56,6 +56,12 @@ bold_italic_font  auto
 disable_ligatures cursor
 
 
+# CURSOR TRAIL
+cursor_trail                 3
+cursor_trail_decay           0.1 0.4
+cursor_trail_start_threshold 3
+
+
 # WINDOWS, LAYOUT, etc
 
 remember_window_size       no
